# StupidWallet-Api

./: .gitignore  README.md  pyproject.toml
stupidwallet/: __init__.py
stupidwallet/classes/: __init__.py  _wallet.py
